Fix: Solved source-notice text size issue on small screens

--- a/src/css/components/typography.scss
+++ b/src/css/components/typography.scss
@@ -46,5 +46,19 @@ header {
 }
 
 .source-notice {
+  @media (max-width: 420px) {
+    font-size: 2.5vw;
+  }
   font-size: clamp(0.5rem, 80%, 0.8rem);
+}
+
+.settings-dialog {
+  .source-notice {
+    @media (min-width: 500px) and (max-width: 650px) {
+      font-size: 1.7vw;
+    }
+    @media (max-width: 499px) {
+      font-size: 2.25vw;
+    }
+  }
 }
